        * Past due: Not completed sorted by due date due date descending, (today into the past)
        * Upcoming: Not completed sorted by due date ascending, (today into the future)
        * Direction of these views can be reversed, useful to see stickies with no due date assigned
      * Stickies can be dragged onto different boards
  * Calendar Changes
    * Sticky editing and viewing from the calendar has changed to use an redesigned popup similar to the one used on the new project page
  * Sticky Changes
    * Multiple stickies completed at once will now send out a single email per user
    * Stickies can now be repeated daily, weekly, monthly, or yearly
      * Upon completing a sticky that has either day, week, month, or year set, a new copy of that sticky is created 1 [day, week, month, year] later
  * Group Changes
    * New Boards can now be created when creating a group
  * Updated to Contour 1.1.2.pre

* Bug Fix
  * Fixed a bug that prevented grouped stickies assigned to a board from being moved back to the holding pen
  * Fixed a bug that sent sticky completion emails out by who it was assigned to as opposed to who marked the sticky as completed

== 0.23.10

* Bug Fix
  * Creating a group from the calendar with a preselected project now correctly popuplates that project's boards and templates

== 0.23.9

* Enhancements
  * Project show page will now default to displaying the first alphabetically unarchived board by default
  * New boards can now be created when stickies are created
  * HTML Markup no longer shows up in a stickies short description
  * HTML Links in sticky descriptions now automatically have target="_blank" added as an attribute
  * Gravatar image's are now used for sticky comments

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive
  * Sticky tooltips no longer show up over a new sticky popup

== 0.23.8

* Bug Fix