@@ -1,0 +1,1 @@
+$("#stickies_search").submit();
